--- a/development-team-web-app/src/main/webapp/WEB-INF/templates/projects.html
+++ b/development-team-web-app/src/main/webapp/WEB-INF/templates/projects.html
@@ -97,7 +97,7 @@
                         <tbody>
                         <tr th:each="project : ${projects}">
                             <td th:text="${project.projectId}">1</td>
-                            <td th:text="${project.dateAdded}">2019-03-12</td>
+                            <td th:date="${project.dateAdded}">2019-03-12</td>
                             <td th:text="${project.countOfDevelopers}">2</td>
                             <td class="text-right">
                                 <a href="project.html"
@@ -307,7 +307,7 @@
 <script>
     $('#descriptionProject').on('show.bs.modal', function (event) {
         var target = $(event.relatedTarget)
-        $(this).find('.modal-body').text('Description of project: "' + target.data('desc') + '"')
+        $(this).find('.modal-body').text('"' + target.data('desc') + '"')
     })
     $(function () {
         $('[data-toggle="tooltip"]').tooltip()
