--- a/development-team-web-app/src/main/webapp/WEB-INF/templates/projectAdd.html
+++ b/development-team-web-app/src/main/webapp/WEB-INF/templates/projectAdd.html
@@ -29,11 +29,11 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <a class="nav-item nav-link active"
-                   href="projects.html"
+                   href="departments.html"
                    th:href="@{/projects}">Projects</a>
                 <a class="nav-item nav-link"
-                   href="developers.html"
-                   th:href="@{/developers}">Developers</a>
+                   href="employees.html"
+                   th:href="@{/employees}">Employees</a>
             </ul>
         </div>
     </nav>
@@ -42,14 +42,12 @@
 
         <ul class="navbar-nav float-lg-left">
             <li class="nav-item"
-                title="Back to list"
-                data-toggle="tooltip"
-                data-placement="bottom"><a href="projects.html"
+                title="Back to list"><a href="projects.html"
                                         th:href="@{/projects}"
                                         class="btn btn-light btn-block"><i
                     class="fa fa-arrow-left"></i></a></li>
         </ul>
-        <span class="navbar-brand text-uppercase mr-auto">Edit project</span>
+        <span class="navbar-brand text-uppercase mr-auto">New project</span>
     </nav>
 </header>
 
@@ -68,7 +66,6 @@
                             <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
                                 <p>Please fix errors below:</p>
                             </div>
-
                             <input id="field_projectId"
                                    type="hidden"
                                    th:field="*{projectId}"/>
@@ -113,102 +110,10 @@
         </div>
     </div>
 
-
-    <section id="developers">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col">
-                    <div class="card">
-                        <div class="card-body">
-                            <form id="developersForm">
-
-
-                                <div class="form-group" th:object="${developerEntity}">
-                                    <label class="form-control-label"
-                                     for="field_developerList">Add developer to project</label>
-                                    <select class="form-control"
-                                            id="field_developerList"
-                                            th:field="*{developerId}">
-                                        <option th:each="developer : ${developersList}"
-                                          value="0" th:value="${developer.developerId}"
-                                            th:text="${developer.lastName}">Masyny</option>
-
-                                    </select>
-                                </div>
-
-                                <div class="d-flex justify-content-end">
-                                    <a href="project.html"
-                                       th:onclick="@{document.forms['developersForm'].submit(); return false;}"
-                                       class="btn btn-primary"
-                                       title="Add to project"
-                                       data-toggle="tooltip"
-                                       data-placement="top">
-                                        <i class="d-none d-sm-inline fa fa-save"></i> Add to project</a>
-                                </div>
-                            </form>
-
-                        <table class="table table-striped" >
-                            <thead class="thead-dark">
-                            <tr>
-                                <th>ID</th>
-                                <th>FirstName</th>
-                                <th>LastName</th>
-
-                                <th></th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                                <tr th:each="developer : ${developers}">
-                                    <td th:text="${developer.developerId}">5</td>
-                                    <td th:text="${developer.firstName}">Vasy</td>
-                                    <td th:text="${developer.lastName}">Sidorov</td>
-                                        <td class="text-right">
-                                            <span data-toggle="modal"
-                                                  data-target="#deleteDialog"
-                                                  th:attr="data-proid=${project.projectId},data-devid=${developer.developerId}">
-                                                            <a href="#" class="btn-sm btn-outline-secondary"
-                                                               title="delete project"
-                                                               data-toggle="tooltip"
-                                                               data-placement="top">
-                                                                <i class="fa fa-remove"></i>
-                                                                <span class="d-none d-md-inline">Delete</span></a>
-                                            </span>
-                                        </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-</section>
 <footer>
     <hr/>
     <p class="text-center">&copy; 2020</p>
 </footer>
-
-<div class="modal fade" id="deleteDialog" tabindex="-1" role="dialog"
-     aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header alert-danger">
-                <h5 class="modal-title" id="exampleModalLabel">Delete developer from project</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                Please confirm delete
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <a id="deleteUrl" href="#" class="btn btn-danger">Delete</a>
-            </div>
-        </div>
-    </div>
-</div>
 
 <script src="../../resources/static/js/jquery-3.4.1.slim.min.js"
         th:src="@{/resources/static/js/jquery-3.4.1.slim.min.js}"></script>
@@ -217,15 +122,6 @@
 <script src="../../resources/static/js/bootstrap.min.js"
         th:src="@{/resources/static/js/bootstrap.min.js}"></script>
 
-<script>
-    $('#deleteDialog').on('show.bs.modal', function (event) {
-        var target = $(event.relatedTarget)
-        $(this).find('.modal-body').text('Please confirm delete developer from project: "' + target.data('devid') + '"')
-        document.getElementById('deleteUrl').href = '/projects/' + target.data('proid')+'/' + target.data('devid') + '/delete';
-    })
-    $(function () {
-        $('[data-toggle="tooltip"]').tooltip()
-    })
-</script>
+
 </body>
 </html>
