--- a/development-team-web-app/src/main/webapp/WEB-INF/templates/projects.html
+++ b/development-team-web-app/src/main/webapp/WEB-INF/templates/projects.html
@@ -32,7 +32,7 @@
                    th:href="@{/projects}">Projects</a>
                 <a class="nav-item nav-link"
                    href="employees.html"
-                   th:href="@{/employees}">Employees</a>
+                   th:href="@{/developers}">Developers</a>
             </ul>
         </div>
     </nav>
