--- a/development-team-web-app/src/main/webapp/WEB-INF/templates/projectAdd.html
+++ b/development-team-web-app/src/main/webapp/WEB-INF/templates/projectAdd.html
@@ -32,8 +32,8 @@
                    href="departments.html"
                    th:href="@{/projects}">Projects</a>
                 <a class="nav-item nav-link"
-                   href="employees.html"
-                   th:href="@{/employees}">Employees</a>
+                   href="developers.html"
+                   th:href="@{/developers}">Developers</a>
             </ul>
         </div>
     </nav>
