Separate Web and Rest applications.

--- a/development-team-web-app/src/main/webapp/WEB-INF/templates/developers.html
+++ b/development-team-web-app/src/main/webapp/WEB-INF/templates/developers.html
@@ -82,7 +82,7 @@
                                         class="d-none d-md-inline">Edit</span></a>
                                 <span data-toggle="modal"
                                       data-target="#deleteDialog"
-                                      th:attr="data-id=${developer.developerId},data-name=${developer.LastName}">
+                                      th:attr="data-id=${developer.developerId},data-name=${developer.lastName}">
                                 <a href="#" class="btn-sm btn-outline-secondary"
                                    title="Delete developer"
                                    data-toggle="tooltip"
