Profiling has been fixed.

--- a/development-team-web-app/src/main/webapp/WEB-INF/templates/projects.html
+++ b/development-team-web-app/src/main/webapp/WEB-INF/templates/projects.html
@@ -298,7 +298,7 @@
     $('#deleteDialog').on('show.bs.modal', function (event) {
         var target = $(event.relatedTarget)
         $(this).find('.modal-body').text('Please confirm delete project: "' + target.data('id') + '"')
-        document.getElementById('deleteUrl').href = '/projects/' + target.data('id') + '/delete';
+        document.getElementById('deleteUrl').href = 'projects/' + target.data('id') + '/delete';
     })
     $(function () {
         $('[data-toggle="tooltip"]').tooltip()
