--- a/development-team-web-app/src/main/webapp/WEB-INF/templates/developers.html
+++ b/development-team-web-app/src/main/webapp/WEB-INF/templates/developers.html
@@ -136,7 +136,7 @@
     $('#deleteDialog').on('show.bs.modal', function (event) {
         var target = $(event.relatedTarget)
         $(this).find('.modal-body').text('Please confirm delete developer: "' + target.data('name') + '"')
-        document.getElementById('deleteUrl').href = '/developers/' + target.data('id') + '/delete';
+        document.getElementById('deleteUrl').href = 'developers/' + target.data('id') + '/delete';
     })
     $(function () {
         $('[data-toggle="tooltip"]').tooltip()
